# tegrabot_description

./: CMakeLists.txt  README.md  package.xml
launch/: robot_state_manager.launch  robot_state_manager_neuronbot.launch  view_model.launch
meshes/computers/: m200_jt2.dae
meshes/sensors/: ydlidar_x4.stl
meshes/stacks/: sensor_pole.dae
urdf/: NeuronBot.urdf.xacro  kobuki.urdf.xacro  tegraBot.urdf.xacro  tegraBot_properties.urdf.xacro
urdf/computers/: m200_jt2.urdf.xacro
urdf/sensors/: astra.urdf.xacro  asus_xtion_pro.urdf.xacro  asus_xtion_pro_offset.urdf.xacro  intel_d435.urdf.xacro  kinect.urdf.xacro  r200.urdf.xacro  ydlidar_x4.urdf.xacro
urdf/stacks/: hexagons.urdf.xacro  tegraBot_stack.urdf.xacro
